--- a/app/Resources/views/pagesFixes/infosPratiques.html.twig
+++ b/app/Resources/views/pagesFixes/infosPratiques.html.twig
@@ -10,6 +10,9 @@
 
 {% block main %}
     <div class="container mb-40">
+        <div class="row mt-20 text-center">
+            <img src="https://www.excellencepro.afadec.org/upload/Communique_annulation.png" />
+        </div>
         <div class="row">
             <div class="col-sm-7 text-justify">
                 <h2>Rendez-vous</h2>
