--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -191,6 +191,7 @@
                         </li>
                         <li><a href="{{ path('myCourses') }}">Les cours</a></li>
                     {% elseif template == 'excellencePro' %}
+                        <li><a target="_blank" href="https://www.excellencepro.afadec.org/upload/Communique_annulation.pdf">Report du salon</a></li>
                         <li><a href="#">Le salon</a>
                             <ul class="sub-menu">                                    <!-- Sub Menu -->
                                 <li><a target="_blank"
