--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -106,7 +106,7 @@
                     $('.col-md-push-8').empty().append('<h3>Accès au site</h3><p>Bonjour,</p><p>Vous êtes bien sur l’espace de formation à distance du salon ExcellencePro. La création d‘un compte et l‘accès aux différentes ressources seront ouverts le 1<sup>er</sup> Mars</p><p>Alors à très bientôt !</p>');
                 }*/
                 if($('.copyRexcellencePro').length){
-                    $('.page-header').append('<div class="msgAlertAnnul">Attention, le salon est reporté !<br>Retrouvez le communiqué ici.</div>').css({
+                    $('.page-header').append('<div class="msgAlertAnnul">Attention, le salon est reporté !<br>Nouvelle date : 18 et 19 novembre 2020<br>Retrouvez le communiqué ici.</div>').css({
                         'position': 'relative'
                     });
                     $('.msgAlertAnnul').click(function(){
@@ -193,7 +193,7 @@
                     {% elseif template == 'excellencePro' %}
                         <li><a href="#">Le salon</a>
                             <ul class="sub-menu">                                    <!-- Sub Menu -->
-                                <li><a target="_blank" href="https://www.excellencepro.afadec.org/upload/Communique_annulation.pdf">Report du salon</a></li>
+                                <li><a target="_blank" href="https://www.excellencepro.afadec.org/upload/Communique_annulation.pdf">Report du salon 18-19 nov 2020</a></li>
                                 <li><a target="_blank"
                                        href="https://enseignement-catholique.fr/wp-content/uploads/2019/10/EXCELLENCE-PRO-Plaquette-3-volets-BD-Page-par-page.pdf">Présentation</a>
                                 </li>
